add get labels list endpoint
