# cmd/main/main.go
@@ -116,6 +116,11 @@ func run() error {
 		cityGroup.GET("", placeHandler.GetCities)
 	}
 
+	labelsGroup := apiV1Group.Group("/labels", authMiddleware.Auth)
+	{
+		labelsGroup.GET("", placeHandler.GetLabels)
+	}
+
 	go func() {
 		defer func() {
 			if r := recover(); r != nil {
